kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cloudmart-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: cloudmart.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudmart-frontend
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cloudmart-backend
                port:
                  number: 5000
